--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         sphinx: [ "5", "6", "7", "8" ]
-        cmake: [ "3.20", "3.30" ]
+        cmake: [ "3.20", "4.1" ]
         os: [ "ubuntu", "macos", "windows" ]
-        python: [ "3.8", "3.11", "3.12" ]
+        python: [ "3.8", "3.12", "3.13" ]
         exclude:
           - sphinx: "8"
             python: "3.8"
+          - sphinx: "5"
+            python: "3.13"
 
     name: |
       v${{ matrix.sphinx }}-${{ matrix.cmake }}
