--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [build-system]
 requires = [
-    "hatchling >= 1.4; python_version >= '3'",
-    "setuptools >= 44; python_version < '3'",
-    "cmake >= 3.20, < 3.31"
+    "hatchling >= 1.4",
+    "cmake >= 3.20, < 4.2"
 ]
-build-backend = "build_backend"
-backend-path = ["."]
+build-backend = "hatchling.build"
 
 [project]
 name = "sphinx-cmake"
 version = "0.2.2"
 description = "Provide CMake module for Sphinx"
 readme = "README.md"
-requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, <4"
+requires-python = ">=3.7, <4"
 license = {file = "LICENSE"}
 keywords = ["cmake", "sphinx", "development"]
 authors = [
@@ -25,8 +23,6 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Build Tools",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 2",
-    "Programming Language :: Python :: 2.7",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
@@ -34,6 +30,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 
 [project.urls]
@@ -55,4 +52,4 @@ path = "build_config.py"
 only-include = ["*.cmake"]
 
 [tool.hatch.build.targets.sdist]
-only-include = ["cmake", "build_config.py", "build_backend.py", "setup.py"]
+only-include = ["cmake", "build_config.py"]
